--- a/index.html
+++ b/index.html
@@ -9,7 +9,31 @@
 
 <body>
     
+    <!-- qui inizia l'header con titolo e immagini -->
+    <header>
 
+    </header>
+
+    <!-- corpo centrale della pagina -->
+    <main>
+
+        <!-- sezione spese -->
+        <section>
+
+        </section>
+
+        <!-- sezione to do  -->
+        <section>
+            
+        </section>
+
+
+    </main>
+
+    <!-- footer della pagina con info e foto -->
+    <footer>
+
+    </footer>
 
 </body>
 
