--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <!-- qui inizia l'header con titolo e immagini -->
     <header>
 
+        <h1>
+            Il mio Viaggio a Londra
+        </h1>
+
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="panorama di Londra 1">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="panorama di Londra 2">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="panorama di Londra 3">
+
+        <hr>
+
     </header>
 
     <!-- corpo centrale della pagina -->
@@ -20,11 +30,54 @@
         <!-- sezione spese -->
         <section>
 
+            <h2>
+                Le mie spese
+            </h2>
+
+            <!-- tabella spese  -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                </tbody>
+
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360€</td>
+                    </tr>
+                </tfoot>
+
+            </table>
+
+            <hr>
         </section>
 
         <!-- sezione to do  -->
         <section>
-            
+
         </section>
 
 
