--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
                         <td>360€</td>
                     </tr>
                 </tfoot>
-
             </table>
 
             <hr>
@@ -78,6 +77,18 @@
         <!-- sezione to do  -->
         <section>
 
+            <h2>
+                Cose da fare
+            </h2>
+
+            <ul>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare Greenwich &check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+            </ul>
+
+            <hr>
         </section>
 
 
