info utili aggiunte

--- a/index.html
+++ b/index.html
@@ -89,13 +89,49 @@
             </ul>
 
             <hr>
+
         </section>
-
-
     </main>
 
     <!-- footer della pagina con info e foto -->
     <footer>
+
+        <!-- sezione info utili  -->
+        <section>
+
+            <h2>
+                Info utili
+            </h2>
+            
+            <ol>
+                <li>Numeri utili di emergenza
+                    <ul>
+                        <li><strong>999</strong> - Emergenza</li>
+                        <li><strong>101</strong> - Numero polizia</li>
+                        <li><strong>111</strong> - Numero assistenza medica</li>
+                    </ul>
+                </li>
+                <li>Hotel
+                    <ul>
+                        <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                        <li><strong>101</strong>: Westminster, Londo SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <li>Aereo
+                    <ul>
+                        <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno</strong>: YI234X, ore 18.30 da London Heathrow</li>
+                    </ul>
+                </li>
+            </ol>
+
+            <hr>
+        </section>
+
+        <!-- sezione foto  -->
+        <section>
+
+        </section>
 
     </footer>
 
