ritocchi formattazione codice

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     
-    <!-- qui inizia l'header con titolo e immagini -->
+    <!-- header con titolo e immagini -->
     <header>
 
         <h1>
@@ -103,6 +103,7 @@
                 Info utili
             </h2>
             
+            <!-- liste non numerate inserite negli elementi della lista numerata -->
             <ol>
                 <li>Numeri utili di emergenza
                     <ul>
