--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
                 <li>Hotel
                     <ul>
                         <li><strong>Nome hotel</strong>: Buckingham Palace</li>
-                        <li><strong>101</strong>: Westminster, Londo SW1A 1AA, Regno Unito</li>
+                        <li><strong>Indirizzo hotel</strong>: Westminster, Londo SW1A 1AA, Regno Unito</li>
                     </ul>
                 </li>
                 <li>Aereo
                     <ul>
-                        <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
-                        <li><strong>Volo di Ritorno</strong>: YI234X, ore 18.30 da London Heathrow</li>
+                        <li><strong>Volo di Andata:</strong> YI234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno:</strong> YI234X, ore 18.30 da London Heathrow</li>
                     </ul>
                 </li>
             </ol>
